# yak-workshop

./: README.md
.github/: dependabot.yml
.github/workflows/: pr_api.yml  pr_cli.yml  pr_yak.yml  push_api.yml
yak/: Cargo.toml  Dockerfile
yak/.cargo/: config
yak/src/: lib.rs
yak/src/tests/: test_yak.rs
yak_api/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md
yak_api/infra/: docker-compose.yml
yak_api/migrations/: 20230321143010_yak.sql
yak_api/src/: health.rs  lib.rs  main.rs  postgres.rs
yak_api/src/connections/: postgres.rs  redis.rs
yak_api/src/dal/: mod.rs  yak.rs
yak_api/src/models/: yak.rs
yak_api/src/routes/: docs.rs  health.rs  herd.rs  metrics.rs  mod.rs  order.rs  stock.rs  yak.rs
yak_api/tests/: health.rs
yak_cli/: .gitignore  Cargo.toml  Dockerfile  Makefile  yaks.xml
yak_cli/.cargo/: config
yak_cli/src/: lib.rs  main.rs
yak_cli/src/tests/: mod.rs  test_yak.rs
