[package]
name = "yak_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version = "4.3.1" }
tokio = { version = "1.26.0", features = ["full"] }
lazy_static = "1.4.0"
prometheus = { version = "0.13.3", features = ["process"] }
redis = { version = "0.22.3", features = ["tokio-comp", "connection-manager"] }
mime = "0.3.16"
env_logger = "0.10.0"
sqlx = { version = "0.6.2", features = [
    "runtime-actix-native-tls",
    "postgres",
] }
