[package]
name = "yak_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.152", features=["derive"]}
tui = "0.19.0"
yak = { git = "https://github.com/adrianvillanueva997/yak-workshop", package = "yak", branch = "main" }
