[package]
name = "yak_cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.25", features = ["serde"] }
cursive = "0.20.0"
serde = { version = "1.0.171", features = ["derive"] }
serde-xml-rs = "0.6.0"
